--- a/labyrinth.css
+++ b/labyrinth.css
@@ -33,7 +33,7 @@ body {
 
 /*text styling start*/
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 #instruction {
